<resources>
    <string name="app_name">Digital Detox Challenge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_1">Home</string>
    <string name="menu_2">Stats</string>
    <string name="menu_3">Logout</string>
    <string name="home_input_select_start_time">Start Time</string>
    <string name="home_hint_input_select_start_time">Select Start Time</string>
    <string name="home_input_select_end_time">End Time</string>
    <string name="home_hint_input_select_end_time">Select End Time</string>
    <string name="home_section_title_suspension_info">Suspension Info</string>
    <string name="home_app_card_info_icon">Info Icon</string>
    <string name="home_suspension_info_btn_start">Start</string>
    <string name="home_suspension_info_btn_update">Update</string>
    <string name="home_suspension_info_btn_stop">Stop</string>
    <string name="block_screen_focus_mode_is_on">Focus Mode is ON</string>
</resources>