<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aleehatech.digitaldetoxchallange.ui.home.HomeFragment"
        android:label="@string/menu_1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.aleehatech.digitaldetoxchallange.ui.stats.StatsFragment"
        android:label="@string/menu_2"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.aleehatech.digitaldetoxchallange.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_3"
        tools:layout="@layout/fragment_slideshow" />
</navigation>